--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
   "name": "rasterfari.scss",
   "version": "0.1.0",
-  "description": "easy peasy dead simple grid system for Sass",
+  "description": "Sass/SCSS grid system which will help you to build grid layouts of any scale and complexity",
   "scripts": {
     "start": "node-sass --watch scss/rasterfari.scss example/css/rasterfari.css"
+  },
+  "homepage": "https://github.io/blateral/rasterfari.scss",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/blateral/rasterfari.scss.git"
   },
   "keywords": [
     "scss",
     "sass",
     "grid"
   ],
-  "author": "Fabian Trinler <fabian.trinler@blateral.com>",
+  "author": "Fabian Trinler <fabian.trinler@blateral.com> (http://blateral.com)",
   "license": "MIT",
   "devDependencies": {
     "node-sass": "^3.4.2"
